--- a/dom.html
+++ b/dom.html
@@ -7,34 +7,40 @@
     <title>Dom</title>
 </head>
 <body>
-    <div class="friend">
-        <h3 class="friend-name">Friend-1</h3>
-        <p>Lorem, ipsum.</p>
+    <div id="friend-container">
+        <div class="friend">
+            <h3 class="friend-name">Friend-1</h3>
+            <p>Lorem, ipsum.</p>
+        </div>
+        <div class="friend">
+            <h3 class="friend-name">Friend-2</h3>
+            <p>Porro, cum.</p>
+        </div>
+        <div class="friend">
+            <h3 class="friend-name">Friend-3</h3>
+            <p>Ea, quam.</p>
+        </div>
+        <div class="friend">
+            <h3 class="friend-name">Friend-4</h3>
+            <p>Autem, hic.</p>
+        </div>
     </div>
-    <div class="friend">
-        <h3 class="friend-name">Friend-2</h3>
-        <p>Porro, cum.</p>
-    </div>
-    <div class="friend">
-        <h3 class="friend-name">Friend-3</h3>
-        <p>Ea, quam.</p>
-    </div>
-    <div class="friend">
-        <h3 class="friend-name">Friend-4</h3>
-        <p>Autem, hic.</p>
-    </div>
+
+
 
     <div>
 
 <h2>Control room</h2>
-<button>Add border</button>
+<button id="add-border">Add border</button>
 <button>Add Background</button>
 <button>Add Friend</button>
 <button>Color Friend Name</button>
 <button>Extra</button>
 
+  </div>
 
 
-    </div>
+<script src="dom.js"></script>
+
 </body>
 </html>
