here is method incleded with parameter

--- a/dom.html
+++ b/dom.html
@@ -40,7 +40,10 @@
   </div>
 
 
-<script src="dom.js"></script>
+<!-- <script src="dom.js"></script> -->
+
+
+<script src="class.js"></script>
 
 </body>
 </html>
